--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Code Quiz</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
@@ -16,41 +16,32 @@
 
   <body>
     <!-- Highscores and Timer -->
-
-    <div class="bg-info clearfix">
+     
+  
+    <!-- <div class="bg-info clearfix"> -->
       <div id="highScores" class="top-left">
         <button
           id="view-highscores"
           type="button"
-          class="btn btn-secondary float-left"
-        >
-          View highscores
+          class="btn btn-secondary float-left">
+          High Scores
         </button>
       </div>
       <button type="button" class="btn btn-secondary float-right">
         Time: <span id="timer"></span>
       </button>
-      <!-- <div class="progress">
-        <div class="progress-bar bg-warning" role="progressbar" style="width: 30%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>  -->
+      
     </div>
 
     <!-- Start Quiz -->
 
     <div class="start m-auto w-50 h-25">
       <div class="card text-center">
-        <img
-          src="assets/code.jpg"
-          class="img-responsive"
-          alt="everyone can code!"
-          height="270px"
-        />
         <div class="card-body">
           <p class="card-text">
-            Good luck! Answering quickly and correctly results in a higher
-            score. Answering incorrectly results in a time penalty.
+            Code Quiz
           </p>
-          <button type="submit" class="btn btn-secondary">Start Quiz!</button>
+          <button type="submit" class="btn btn-secondary">Start</button>
         </div>
       </div>
     </div>
@@ -128,6 +119,6 @@
     </div>
 
     <script src="scripts/questions.js" defer></script>
-    <script src="scripts/script.js" defer></script>
+    <script src="scripts/main.js" defer></script>
   </body>
 </html>
