--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Quiz</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="container-fluid">
-        <span>view highscores</span>
-        <span id="timer"></span>
+      <span>view highscores</span>
+      <span class="time">timer:<span id="timer">0</span></span>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div id="start">
-                    <button id="start-btn">start quiz</button>
-                </div>
-                <div id="begin" class="hidden">
-                    begin
-                </div>
-                <div id="highscore" class="hidden">
-                    <div id="initials" class="hidden">
-                        <input type="text" id="initial-name">
-                        <button id="add-initial">add initals</button>
-                    </div>
-                    <div id="score" class="hidden">
-                        <button id="clear-score">clear score</button>
-                        <button id="go-back">go back</button>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div id="start">
+            <button id="start-btn">start quiz</button>
+          </div>
+          <div id="begin" class="hidden">
+            begin
+          </div>
+          <div id="highscore" class="hidden">
+            <div id="initials" class="hidden">
+              <input type="text" id="initial-name" />
+              <button id="add-initial">add initals</button>
             </div>
+            <div id="score" class="hidden">
+              <button id="clear-score">clear score</button>
+              <button id="go-back">go back</button>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <script src="./questions.js"></script>
     <script src="./script.js"></script>
-   
-</body>
+  </body>
 </html>
