--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
           </div>
           <div id="begin" class="hidden">
             begin
+
+            <!-- place questions here -->
+                  <div id="questions"></div>
+
+                  <div id="choices"></div>
+                  <hr>
+                  <div id="status"></div>
           </div>
           <div id="highscore" class="hidden">
             <div id="initials" class="hidden">
