--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Quiz</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Raleway&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -14,8 +15,8 @@
   </head>
   <body>
     <div class="container-fluid">
-      <span>view highscores</span>
-      <span class="time">timer:<span id="timer">0</span></span>
+      <span>high scores</span>
+      <span class="time">timer:<span id="timer"> 0</span></span>
     </div>
     <div class="container">
       <div class="row">
