--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="background">
+    <div id="background">
       <div class="container-fluid">
         <span>high scores</span>
         <span class="time">timer:<span id="timer"> 0</span></span>
