--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="background">
       <div class="container-fluid">
         <span>high scores</span>
         <span class="time">timer:<span id="timer"> 0</span></span>
@@ -26,7 +25,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div id="start">
-              <button id="start-btn">start quiz</button>
+              <button id="start-btn">start code quiz</button>
             </div>
             <div id="begin" class="hidden">
               <!-- place questions here -->
